modified:   .env 	modified:   Databases/PostgresDB/Sql/init-scripts/Database_check.sql

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Environments for PostgreSQL Database
 POSTGRES_USER=hakaishin
-POSTGRES_PW=secureDB
+POSTGRES_PASSWORD=secureDB
 POSTGRES_DB=HospitalDB
 
 ##################################################################
