working project beta 1

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Environments for PostgreSQL Database
-POSTGRES_USER=hakaishin
+POSTGRES_USER=postgres
 POSTGRES_PASSWORD=secureDB
 POSTGRES_DB=HospitalDB
 
