--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,8 @@ services:
     networks:
       earth-network:
         ipv4_address: "10.10.20.2"
+      space-network:
+        ipv4_address: "10.10.10.4"
     restart: always
 
   web-server:
@@ -50,7 +52,7 @@ services:
       # PGDATA: default is /var/lib/postgresql/data
     volumes:
        - ./Databases/PostgresDB/data:/var/lib/postgresql/data
-       - ./Databases/PostgresDB/init-scripts:/docker-entrypoint-initdb.d
+       - ./Databases/PostgresDB/Sql/init-scripts:/docker-entrypoint-initdb.d
     networks:
       earth-network:
         ipv4_address: "10.10.20.5"
